<?xml version="1.0" encoding="utf-8"?>
<androidx.drawerlayout.widget.DrawerLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/channel_drawer_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.ChannelListActivity">

    <androidx.coordinatorlayout.widget.CoordinatorLayout
            android:id="@+id/channels_list_layout"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

        <com.google.android.material.appbar.AppBarLayout
            android:id="@+id/channel_app_bar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
            app:layout_constraintBottom_toTopOf="@+id/channel_pager"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <androidx.appcompat.widget.Toolbar
                android:id="@+id/channel_toolbar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                android:background="?attr/colorPrimary"
                app:popupTheme="@style/ThemeOverlay.AppCompat.Light" />

            <com.google.android.material.tabs.TabLayout
                android:id="@+id/channel_tabs"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:tabBackground="@color/colorPrimary"
                app:tabGravity="fill"
                app:tabMode="fixed"
                app:tabTextColor="@android:color/white" />

        </com.google.android.material.appbar.AppBarLayout>

        <androidx.viewpager.widget.ViewPager
            android:id="@+id/channel_pager"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/channel_app_bar"
            app:layout_behavior="@string/appbar_scrolling_view_behavior">

        </androidx.viewpager.widget.ViewPager>

        <View
            android:id="@+id/sheet_background"
            android:background="@color/sheet_background"
            android:alpha="0"
            android:visibility="gone"
            android:clickable="true"
            android:focusable="true"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />

        <include
            android:id="@+id/add_channel_sheet"
            layout="@layout/view_channel_add_screen" />

        <include
            android:id="@+id/user_profile_sheet"
            layout="@layout/view_user_profile_screen" />

    </androidx.coordinatorlayout.widget.CoordinatorLayout>

    <com.google.android.material.navigation.NavigationView
        android:id="@+id/channel_drawer_menu"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:background="@color/drawer_background"
        android:fitsSystemWindows="true"
        android:layout_gravity="start"
        app:headerLayout="@layout/view_drawer_header">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="16dp"
            android:layout_gravity="bottom">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                android:text="@string/simulate_crash_in" />

            <Button
                android:id="@+id/drawer_java_crash"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                android:textAllCaps="false"
                android:text="@string/crash_in_channel_list_activity" />

            <Button
                android:id="@+id/drawer_chat_crash"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                android:textAllCaps="false"
                android:text="@string/crash_in_chat_client" />

            <Button
                android:id="@+id/drawer_tm_crash"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                android:textAllCaps="false"
                android:text="@string/crash_in_tm_client" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1.5dp"
                android:layout_marginBottom="16dp"
                android:background="@color/divider"/>

            <Button
                android:id="@+id/drawer_sign_out_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/sign_out" />

        </LinearLayout>

    </com.google.android.material.navigation.NavigationView>

</androidx.drawerlayout.widget.DrawerLayout>
