<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/dialog_background"
    android:elevation="5dp"
    app:behavior_hideable="true"
    app:behavior_peekHeight="0dp"
    app:layout_behavior="com.google.android.material.bottomsheet.BottomSheetBehavior">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="16dp">

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/channel_name_input_holder"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toTopOf="@id/channel_type_dropdown">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/channel_name_input"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hint_channel_name"
                android:inputType="textCapSentences" />

        </com.google.android.material.textfield.TextInputLayout>

        <Spinner
            android:id="@+id/channel_type_dropdown"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_marginBottom="16dp"
            android:entries="@array/channel_type"
            style="@style/Widget.AppCompat.Spinner.Underlined"
            android:paddingStart="0dp"
            android:paddingEnd="0dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/channel_name_input_holder"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toTopOf="@id/add_channel_button" />

        <Button
            android:id="@+id/add_channel_cancel_button"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/cancel"
            android:elevation="5dp"
            android:layout_marginEnd="4dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toStartOf="@id/add_channel_button"
            app:layout_constraintBottom_toBottomOf="parent" />

        <Button
            android:id="@+id/add_channel_button"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/add_channel"
            android:elevation="5dp"
            android:layout_marginStart="4dp"
            app:layout_constraintStart_toEndOf="@id/add_channel_cancel_button"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.cardview.widget.CardView>
